Fix spacing around hr (#88)

--- a/skydoc/sass/main.scss
+++ b/skydoc/sass/main.scss
@@ -164,8 +164,8 @@ table.overview-table {
 }
 
 hr {
-  margin-top: 80px;
-  margin-bottom: 80px;
+  margin-top: 40px;
+  margin-bottom: 40px;
 }
 
 nav.toc {
